eleves vue et template

--- a/sem_5/django/ifnti_l3/notes/templates/notes/eleves.html
+++ b/sem_5/django/ifnti_l3/notes/templates/notes/eleves.html
@@ -1,4 +1,29 @@
-<h1>Liste des élèves</h1>
+<h1>Liste des élèves avec leurs notes et moyennes</h1>
+<ul>
+    {% for eleve in eleves %}
+    <li>{{ eleve }}</li>
+    <li>
+        <strong>{{ eleve.nom }}</strong> - Niveau: {{ eleve.niveau }}
+        <ul>
+            {% for matiere_note in eleve.matieres_notes %}
+            <li>{{ matiere_note.matiere }} - Moyenne: {{ matiere_note.note }}</li>
+            {% endfor %}
+        </ul>
+    </li>
+    {% endfor %}
+</ul>
+
+
+
+
+
+
+
+
+
+
+
+<!-- <h1>Liste des élèves</h1>
 <ul>
     {% for eleve in eleves %}
     <li>
@@ -8,4 +33,4 @@
         {% endfor %}
     </li>
     {% endfor %}
-</ul>
+</ul> -->
