--- a/sem_5/django/ifnti_l3/notes/templates/notes/detail_eleve.html
+++ b/sem_5/django/ifnti_l3/notes/templates/notes/detail_eleve.html
@@ -2,7 +2,7 @@
 <p>Niveau: {{ eleve.niveau.nom }}</p>
 <p>Matières :</p>
 <ul>
-    {% for matiere in eleve.matieres.all %}
-    <li>{{ matiere.nom }} - Note: {{ matiere.note_set.first.note }} (si une relation existe)</li>
+    {% for matiere in matieres_notes %}
+    <li>{{ matiere.matiere }} - Note: {{ matiere.note }} </li>
     {% endfor %}
 </ul>
