suite sur le projet python

--- a/sem_5/django/ifnti_l3/notes/templates/notes/eleves.html
+++ b/sem_5/django/ifnti_l3/notes/templates/notes/eleves.html
@@ -1,7 +1,7 @@
 <h1>Liste des élèves avec leurs notes et moyennes</h1>
 <ul>
     {% for eleve in eleves %}
-    <li>{{ eleve }}</li>
+    <!-- <li>{{ eleve }}</li> -->
     <li>
         <strong>{{ eleve.nom }}</strong> - Niveau: {{ eleve.niveau }}
         <ul>
