--- a/sem_5/django/ifnti_l3/notes/templates/notes/matieres.html
+++ b/sem_5/django/ifnti_l3/notes/templates/notes/matieres.html
@@ -1,6 +1,7 @@
 <h1>Liste des matières</h1>
 <ul>
     {% for matiere in matieres %}
-    <li>{{ matiere.nom }} - Enseignant: {{ matiere.enseignant.nom }}</li>
+    <!-- <li>{{ matiere }}</li> -->
+    <li>{{ matiere.matiere }} - Enseignant: {{ matiere.enseignants }}</li>
     {% endfor %}
 </ul>
