--- a/sem_5/django/ifnti_l3/notes/templates/notes/detail_matiere.html
+++ b/sem_5/django/ifnti_l3/notes/templates/notes/detail_matiere.html
@@ -1,3 +1,4 @@
-<h1>Détail de la matière : {{ matiere.nom }}</h1>
+<h1>Détail de la matière</h1>
+<p>Matière : {{ matiere.nom }}</p>
 <p>Enseignant: {{ matiere.enseignant.nom }}</p>
-<p>Description: {{ matiere.description }}</p>
+<!-- <p>Description: {{ matiere.description }}</p> -->
