--- a/sem_5/django/ifnti_l3/notes/templates/notes/eleves.html
+++ b/sem_5/django/ifnti_l3/notes/templates/notes/eleves.html
@@ -1,32 +1,60 @@
-<h1>Liste des élèves avec leurs notes et moyennes</h1><br>
+<h1>Liste des élèves avec leurs notes et moyennes</h1>
+<br />
 <ul>
-    {% for eleve in eleves %}
-    <!-- <li>{{ eleve }}</li> -->
-     <!--         <li><a href="">{{ eleve.nom }} {{ eleve.prenom }}</a></li> -->
-    <li>
-        <strong>{{ eleve.nom }}</strong> - <a href="{% url 'notes:niveau' eleve.niveau_id %}">Niveau: {{ eleve.niveau }}</a>
-        <!-- <strong>{{ eleve.nom }}</strong> - <a href="/notes/niveau/{{ eleve.niveau_id }}">Niveau: {{ eleve.niveau }}</a> -->
+  
+  <!-- <li>{{ eleve }}</li> -->
+  <style>
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+    table, th, td {
+        border: 1px solid black;
+    }
+    th, td {
+        padding: 10px;
+        text-align: left;
+    }
+</style>
+  <table>
+    <thead>
+      <tr>
+        <th>Nom</th>
+        <th>Prénom</th>
+        <!-- <th>Sexe</th> -->
+        <th>Date de naissance</th>
+        <th>Voir Détails</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Élève 1 -->
+      {% for eleve in eleves %}
+      <!-- <li>{{ eleve }}</li> -->
+      <tr>
+        <td>{{eleve.nom}}</td>
+        <td>{{eleve.prenom}}</td>
+        <!-- <td>{{eleve.sexe}}</td> -->
+        <td>{{eleve.date_naissance}}</td>
+        <td><a href="{% url 'notes:eleve' eleve.id %}">Voir</a></td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  <!--         <li><a href="">{{ eleve.nom }} {{ eleve.prenom }}</a></li> -->
+  <!-- <li>
+        <strong>{{ eleve.nom }}</strong> - <a href="{}">Niveau: {{ eleve.niveau }}</a>
+        <strong>{{ eleve.nom }}</strong> - <a href="/notes/niveau/{{ eleve.niveau_id }}">Niveau: {{ eleve.niveau }}</a>
         <ul>
             {% for matiere_note in eleve.matieres_notes %}
             <li>{{ matiere_note.matiere }}</li>
-            <!-- - Moyenne: {{ matiere_note.note }} -->
+            - Moyenne: {{ matiere_note.note }}
             {% endfor %}
         </ul>
-        <li><a href="{% url 'notes:eleve' eleve.id %}">{{ eleve.nom }}</a></li><br><br><br>
-        <!-- <li><a href="/notes/eleve/{{ eleve.id }}/">{{ eleve.nom }}</a></li><br><br><br> -->
-    </li>
-    {% endfor %}
+        <li><a href="{}">{{ eleve.nom }}</a></li><br><br><br>
+        <li><a href="/notes/eleve/{{ eleve.id }}/">{{ eleve.nom }}</a></li><br><br><br>
+    </li> -->
+  
 </ul>
-
-
-
-
-
-
-
-
-
-
 
 <!-- <h1>Liste des élèves</h1>
 <ul>
