--- a/sem_5/django/ifnti_l3/notes/templates/notes/detail_eleve.html
+++ b/sem_5/django/ifnti_l3/notes/templates/notes/detail_eleve.html
@@ -2,7 +2,7 @@
 <p>Niveau: {{ eleve.niveau.nom }}</p>
 <p>Matières :</p>
 <ul>
-    <!-- {{eleve_id}} -->
+    <!-- {{eleve}} -->
     {% for matiere in matieres %}
     <!-- {{matiere}} -->
     <li>{{ matiere.nom }} </li>
