--- a/sem_5/django/ifnti_l3/notes/templates/notes/eleves.html
+++ b/sem_5/django/ifnti_l3/notes/templates/notes/eleves.html
@@ -24,6 +24,7 @@
         <!-- <th>Sexe</th> -->
         <th>Date de naissance</th>
         <th>Voir Détails</th>
+        <th>Modifier</th> 
       </tr>
     </thead>
     <tbody>
@@ -36,10 +37,14 @@
         <!-- <td>{{eleve.sexe}}</td> -->
         <td>{{eleve.date_naissance}}</td>
         <td><a href="{% url 'notes:eleve' eleve.id %}">Voir</a></td>
+        <td><a href="{% url 'notes:updateEleve' eleve.id %}">Modifier</a></td> <!-- Lien de modification -->
       </tr>
       {% endfor %}
     </tbody>
   </table>
+  
+  <a href="{% url 'notes:addEleve' %}">Ajouter un Eleve</a>
+
   <!--         <li><a href="">{{ eleve.nom }} {{ eleve.prenom }}</a></li> -->
   <!-- <li>
         <strong>{{ eleve.nom }}</strong> - <a href="{}">Niveau: {{ eleve.niveau }}</a>
@@ -54,7 +59,7 @@
         <li><a href="/notes/eleve/{{ eleve.id }}/">{{ eleve.nom }}</a></li><br><br><br>
     </li> -->
   
-</ul>
+<!-- </ul> -->
 
 <!-- <h1>Liste des élèves</h1>
 <ul>
