--- a/sem_5/django/ifnti_l3/notes/templates/notes/index.html
+++ b/sem_5/django/ifnti_l3/notes/templates/notes/index.html
@@ -17,4 +17,9 @@
 
 <a href="{% url 'notes:matieres' %}">
     <button>Voir liste de matiere</button>
+</a><br>
+
+
+<a href="{% url 'notes:enseignants' %}">
+    <button>Voir liste des enseignant </button>
 </a>
