--- a/sem_5/django/ifnti_l3/notes/templates/notes/index.html
+++ b/sem_5/django/ifnti_l3/notes/templates/notes/index.html
@@ -1,25 +1,3 @@
-<title>Notes</title>
-
-<style>
-    .body{
-        display: flex;
-        justify-content: center;
-    }
-</style>
-
-
-
-<h1>Bienvenue sur l'application Note !</h1>
-
-<a href="{% url 'notes:eleves' %}"><button>
-    Voir liste des éleves
-</button></a>
-
-<a href="{% url 'notes:matieres' %}">
-    <button>Voir liste de matiere</button>
-</a><br>
-
-
-<a href="{% url 'notes:enseignants' %}">
-    <button>Voir liste des enseignant </button>
-</a>
+{% include '../base/header.html' %}
+<h1>Body de HTML </h1>
+{% include '../base/footer.html' %}
