--- a/sem_5/JEE/congé projet/platforme/src/main/resources/templates/jobs/add_jobs.html
+++ b/sem_5/JEE/congé projet/platforme/src/main/resources/templates/jobs/add_jobs.html
@@ -26,5 +26,6 @@
 
         <button type="submit">Submit</button>
     </form>
+	<button onclick="window.location.href='/api/jobs'">Retour à la liste</button>
 </body>
 </html>
